<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/_10sdp"
   >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:textColor="@color/black"
       android:padding="2dp"
        android:text="@string/name"
        android:layout_marginTop="10dp"
        app:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:textSize="16sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phone_number"
        android:textColor="@color/black"
        android:padding="2dp"
        android:text="@string/phone_number_not_mandatory"
        app:fontFamily="@font/montserrat_regular"
        android:layout_below="@+id/name"

        android:gravity="center"
        android:textSize="14sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:textColor="@color/black"
        android:padding="2dp"
        android:text="@string/email_not_mandatory"
        app:fontFamily="@font/montserrat_regular"
        android:layout_below="@+id/phone_number"

        android:gravity="center"
        android:textSize="14sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/role"
        android:textColor="@color/black"
        android:padding="2dp"
        android:text="@string/role_not_mandatory"
        app:fontFamily="@font/montserrat_regular"
        android:layout_below="@+id/email"
        android:layout_marginRight="@dimen/_10sdp"
       android:layout_alignParentRight="true"
        android:gravity="center"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey_text_font_3.1"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/role"
        android:layout_marginBottom="10dp"
        />
</RelativeLayout>