<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
    tools:context=".view.FastLinkActivity">
    <include
        android:id="@+id/header_layout"
        layout="@layout/agent_header"
        android:visibility="visible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@+id/header_layout"
            >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fast_tag_linking"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="10dp"
            app:fontFamily="@font/montserrat_medium"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_barcode_number"
                android:layout_gravity="left"
                android:textSize="16sp"
                android:layout_marginTop="@dimen/_20sdp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                app:fontFamily="@font/montserrat_medium"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/enter_barcode_number_desc"
                android:layout_gravity="left"
                android:textSize="12sp"
                app:fontFamily="@font/montserrat_medium"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:padding="5dp"
                    android:layout_weight="5"
                    android:background="@drawable/edite_text_bg"
                    android:hint="608116-XXX-XXXXXXX" />
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:paddingRight="2dp"
                    android:paddingLeft="2dp"
                    android:textAllCaps="false"
                    android:onClick="scanBarCode"
                    android:layout_marginStart="5dp"
                    android:text="@string/scan_bar_code"
                    android:textColor="@color/white"
                    android:background="@drawable/green_button_corner"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:textAllCaps="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:onClick="submit"
                android:text="@string/link_your_fast_tag"
                android:textColor="@color/white"
                android:background="@drawable/orange_b_corner"/>
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>