<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
    tools:context=".CreateAgentActivity">
    <include layout="@layout/agent_header"
        android:id="@+id/create_agent_header_layout"
        android:visibility="visible"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/create_agent_header_layout"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_lead_details"
            android:id="@+id/title"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            app:fontFamily="@font/montserrat_medium"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_team_lead"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="7"
            android:layout_gravity="center"
            android:hint="@string/select_team_lead"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_select_team_lead"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="text"
                android:editable="false"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
                android:clickable="false"
                android:drawableRight="@drawable/down_arrow"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_first_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:layout_weight="7"
            android:layout_gravity="center"

            android:hint="@string/first_name"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_first_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"

                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_last_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="7"
            android:layout_gravity="center"
            android:hint="@string/last_name"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_last_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_phone_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="7"
            android:layout_gravity="center"
            android:hint="@string/phone_number"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone_number_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_email_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="7"
            android:layout_gravity="center"
            android:hint="@string/email"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="7"
            android:layout_gravity="center"
            android:hint="@string/address"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_address_input"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:gravity="top"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/submit"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:paddingRight="35dp"
            android:paddingLeft="35dp"
            android:textAllCaps="false"
            android:text="@string/submit"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintLeft_toLeftOf="@id/address_card_view"
            app:layout_constraintRight_toRightOf="@id/address_card_view"
            app:layout_constraintTop_toBottomOf="@id/address_card_view"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/white"
            android:background="@drawable/orange_b_corner"
            android:layout_marginBottom="@dimen/_55sdp"
            />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>