<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
    tools:context=".view.AgentSignupActivity">

    <include layout="@layout/agent_header"
        android:id="@+id/header_layout"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginBottom="@dimen/_30dp"
        app:layout_constraintTop_toBottomOf="@+id/header_layout"
        android:id="@+id/personal_details_card_view"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                app:fontFamily="@font/montserrat_medium"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_vehicle_class"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="7"
                android:layout_gravity="center"
                android:editable="false"
                android:clickable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/select_category"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/select_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:editable="false"
                    android:focusableInTouchMode="false"
                    android:cursorVisible="false"
                    android:clickable="false"
                    android:drawableRight="@drawable/down_arrow"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/phone_number"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_phone_number_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:text=""
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit_generate_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/get_otp"
                android:background="@drawable/orange_b_corner"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:textAllCaps="false"
                android:visibility="visible"
                android:textSize="14sp"
                app:fontFamily="@font/montserrat_medium"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/ll_change_pwd"
                android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:hint="@string/enter_otp"
                android:layout_marginTop="@dimen/_5sdp"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_otp_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:hint="@string/new_password"
                android:layout_marginTop="@dimen/_5sdp"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_new_passwod_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:hint="@string/confirm_password"
                android:layout_marginTop="@dimen/_5sdp"
                app:errorEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_confirm_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="10"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:gravity="center"
                android:text="@string/submit"
                android:background="@drawable/orange_b_corner"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:fontFamily="@font/montserrat_medium"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/purple_700"
                    android:id="@+id/tv_timer"
                    android:textSize="10sp"
                    android:visibility="visible"
                    app:fontFamily="@font/montserrat_medium"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:text="@string/resend"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/resend_otp"
                android:textColor="@color/orange_bg"
                android:layout_gravity="center"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:textAllCaps="false"
                android:visibility="gone"
                android:textSize="14sp"
                app:fontFamily="@font/montserrat_medium"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>